--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.cloud.gcp.project-id=${GCP_PROJECT_ID}
 spring.cloud.gcp.credentials.location=${GCP_CREDENTIALS_LOCATION}
+
+app.bucket=example
