--- a/pom.xml
+++ b/pom.xml
@@ -37,10 +37,10 @@
 			<!--<groupId>com.microsoft.azure</groupId>-->
 			<!--<artifactId>azure-storage-spring-boot-starter</artifactId>-->
 		<!--</dependency>-->
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-gcp-starter</artifactId>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.springframework.cloud</groupId>-->
+			<!--<artifactId>spring-cloud-gcp-starter</artifactId>-->
+		<!--</dependency>-->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-gcp-starter-storage</artifactId>
