--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,19 @@
-spring.cloud.gcp.project-id=${GCP_PROJECT_ID}
-spring.cloud.gcp.credentials.location=file:/Users/Chris/Desktop/PillowFruit/credentials/Sample-Project-c259cbd07e0c.json
 
-app.gcp.bucket=sc_test_bucket
+# -- AWS Properties --
+# Disable CloudFormation configuration
+cloud.aws.stack.auto=false
+cloud.aws.region.static=us-east-1
+
+# https://cloud.spring.io/spring-cloud-aws/spring-cloud-aws.html#_configuring_credentials
+cloud.aws.credentials.accessKey=${AWS_ACCESS_KEY}
+cloud.aws.credentials.secretKey=${AWS_SECRET_KEY}
+cloud.aws.credentials.instanceProfile=true
+cloud.aws.credentials.useDefaultAwsCredentialsChain=true
+
+app.aws.bucket=${AWS_BUCKET_NAME}
+
+# -- GCP Properties --
+spring.cloud.gcp.project-id=${GCP_PROJECT_ID}
+spring.cloud.gcp.credentials.location=${GCP_CREDENTIALS_LOCATION}
+
+app.gcp.bucket=${GCP_BUCKET_NAME}
