added more tests for AWS service and added test properties

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,17 +1,12 @@
 
 # -- AWS Properties --
 
-# Disable CloudFormation configuration
-cloud.aws.stack.auto=false
-cloud.aws.region.static=us-east-1
-
-# https://cloud.spring.io/spring-cloud-aws/spring-cloud-aws.html#_configuring_credentials
 cloud.aws.credentials.accessKey=${AWS_ACCESS_KEY}
 cloud.aws.credentials.secretKey=${AWS_SECRET_KEY}
 cloud.aws.credentials.instanceProfile=true
 cloud.aws.credentials.useDefaultAwsCredentialsChain=true
 
-app.aws.bucket=${AWS_BUCKET_NAME}
+app.aws.bucket=test
 
 
 # -- GCP Properties --
@@ -19,4 +14,4 @@ app.aws.bucket=${AWS_BUCKET_NAME}
 spring.cloud.gcp.project-id=${GCP_PROJECT_ID}
 spring.cloud.gcp.credentials.location=${GCP_CREDENTIALS_LOCATION}
 
-app.gcp.bucket=${GCP_BUCKET_NAME}
+app.gcp.bucket=bleep
