--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,21 @@
+spring.application.name=file-storage
+
+# -- DB Properties --
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=filestorage
+spring.datasource.username=${POSTGRESQL_DB_USERNAME}
+spring.datasource.password=${POSTGRESQL_DB_PASSWORD}
+
+# Disable driver's feature detection, https://github.com/spring-projects/spring-boot/issues/12007
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+# Dialect set for PostgreSQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto, in production mode use ddl-auto=none or validate and execute explicit DDL
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.show-sql=true
+
 
 # -- AWS Properties --
 
