added a repository test using H2

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,4 +1,14 @@
 
+# -- DB Properties --
+
+# Hibernate ddl auto, create-drop used when testing
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.show-sql=true
+
+# Disable Flyway migrations when testing
+spring.flyway.enabled=false
+
+
 # -- AWS Properties --
 
 cloud.aws.credentials.accessKey=${AWS_ACCESS_KEY}
