updated properties file to recognize schema for flyway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=file-storage
 
 # -- DB Properties --
 
+# Note the schema in the url
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=filestorage
 spring.datasource.username=${POSTGRESQL_DB_USERNAME}
 spring.datasource.password=${POSTGRESQL_DB_PASSWORD}
@@ -15,6 +16,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Hibernate ddl auto, in production mode use ddl-auto=none or validate and execute explicit DDL
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.hibernate.show-sql=true
+
+# Fyway properties, note the schema
+spring.flyway.url=jdbc:postgresql://localhost:5432/postgres
+spring.flyway.schemas=filestorage
+spring.flyway.user=${POSTGRESQL_DB_USERNAME}
+spring.flyway.password=${POSTGRESQL_DB_PASSWORD}
 
 
 # -- AWS Properties --
