--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,6 +1,14 @@
 
 # -- DB Properties --
 
+# H2 with default configuration
+# NOTE: Datasource must be defined, otherwise regular datasource will be impacted (e.g. tables dropped)
+spring.datasource.url=jdbc:h2:mem:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
 # Hibernate ddl auto, create-drop used when testing
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.show-sql=true
